--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -592,8 +592,10 @@ section {
 # About Us
 --------------------------------------------------------------*/
 .about .content h3 {
-  font-weight: 600;
-  font-size: 26px;
+  font-weight: 700;
+  font-size: 32px;
+  color: #37517e;
+  font-family: "Poppins", sans-serif;
 }
 
 .about .content ul {
